# opencv_edge_detection

./: .gitignore  CMakeLists.txt  README.md
src/: CannyConfiguration.cpp  CannyConfiguration.h  DisplayWindow.cpp  DisplayWindow.h  Image.cpp  Image.h  ImageEdgeDetection.cpp  ImageEdgeDetection.h  main.cpp
